<resources>
    <string name="app_name">Quiz app complete</string>
    <string name="login">Login</string>
    <string name="no_account">Do not have an Account ?</string>
    <string name="signup">Signup</string>
    <string name="have_account">Already have an Account ?</string>
    <string name="role">Select Role :</string>
    <string name="role_student">Student</string>
    <string name="role_prof">Professor</string>
    <string name="Save">Save</string>
    <string name="save">Save</string>
    <string name="Open">Open Navigation Drawer</string>
    <string name="Close">Close Navigation Drawer</string>
    <string name="welcome">Welcome</string>
    <string name="save_quiz">Save Quiz Information</string>
    <string name="createQuestion">Create Question</string>
    <string name="rules">1. Once the quiz is started, you cannot leave without submitting. \n2. If you run out of time, your quiz will be auto submitted.</string>
</resources>
