<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/welcome_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/HeadingBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:gravity="center">

        <Button
            android:id="@+id/btnLogin_Welcome"
            style="@style/BodyLargeBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bottons"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            style="@style/BodySmallReg"
            android:textColor="@color/colorPrimary"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnSignup_Welcome"
            style="@style/BodyLargeBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bottons"
            android:text="@string/signup"
            android:textColor="@color/white" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>