<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/welcome_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/HeadingBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <EditText
            android:id="@+id/etSignupName"
            style="@style/BodyMediumReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_fields"
            android:drawableStart="@drawable/ic_person_primary_24dp"
            android:drawableLeft="@drawable/ic_person_primary_24dp"
            android:drawablePadding="10dp"
            android:hint="Enter Full Name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/etSignupEmail"
            style="@style/BodyMediumReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_fields"
            android:drawableStart="@drawable/ic_person_primary_24dp"
            android:drawableLeft="@drawable/ic_person_primary_24dp"
            android:drawablePadding="10dp"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/etSignupPassword"
            style="@style/BodyMediumReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_fields"
            android:drawableStart="@drawable/ic_lock_primary_24dp"
            android:drawableLeft="@drawable/ic_lock_primary_24dp"
            android:drawablePadding="10dp"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/etSignupInstitute"
            style="@style/BodyMediumReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_fields"
            android:drawableStart="@drawable/ic_building_black_24dp"
            android:drawableLeft="@drawable/ic_building_black_24dp"
            android:drawablePadding="10dp"
            android:hint="Enter Institute Code"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/BodyMediumReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/role"
                android:textColor="@color/colorPrimary" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/role_student"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbProfessor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/role_prof"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnSignup"
            style="@style/BodyLargeBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_bottons"
            android:text="@string/signup"
            android:textColor="@color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/login_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/white"
            style="@style/BodyMediumReg"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            style="@style/BodyMediumBold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>